<resources>
    <string name="app_name">Pig Out</string>
    <string name="start_button_text">Start</string>
    <string name="keyword_textview">Keyword</string>
    <string name="keyword_edittext"/>
    <string name="location_textview">Location</string>
    <string name="pricetogglebutton1">PriceToggleButton1</string>
    <string name="pricetogglebutton2">PriceToggleButton2</string>
    <string name="pricetogglebutton3">PriceToggleButton3</string>
    <string name="pricetogglebutton4">PriceToggleButton4</string>
    <string name="pricetogglebutton1_off">$</string>
    <string name="pricetogglebutton2_off">$$</string>
    <string name="pricetogglebutton3_off">$$$</string>
    <string name="pricetogglebutton4_off">$$$$</string>
    <string name="pricetogglebutton1_on">$</string>
    <string name="pricetogglebutton2_on">$$</string>
    <string name="pricetogglebutton3_on">$$$</string>
    <string name="pricetogglebutton4_on">$$$$</string>
    <string name="next_button_text">Next</string>
    <string name="prev_button_text">Previous</string>

    <string name="businessName_text">BUSINESS NAME</string>
    <string name="address_text">ADDRESS</string>
    <string name="rating_text">RATING</string>
    <string name="rating_image">RATING IMAGE</string>
    <string name="currentNum_text">CURRENT NUMBER</string>
    <string name="randomNum_text">RANDOM NUMBER</string>
    <string name="distance_text">DISTANCE</string>
    <string name="type_text">TYPE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
