<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".BusinessFragment">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <Button
                android:id="@+id/next_button"
                android:text="@string/next_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintVertical_bias="0.95"
                app:layout_constraintHorizontal_bias="0.9"/>
        <Button
                android:id="@+id/select_button"
                android:text="SELECT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/prev_button"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="@id/prev_button"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="@id/prev_button"
                android:layout_marginTop="8dp"
                android:onClick="select_Click"/>

        <Button
                android:id="@+id/prev_button"
                android:text="@string/prev_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintVertical_bias="0.95"
                app:layout_constraintHorizontal_bias="0.1"/>
        <TextView
                android:text="@string/businessName_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="20sp"
                app:layout_constraintVertical_bias="0.7"
                android:id="@+id/businessName"
                android:gravity="start"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textIsSelectable="true"/>


        <ImageView
                android:text="@string/rating_image"
                app:layout_constraintTop_toBottomOf="@id/businessName"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating_image"
                android:textColor="@color/colorGrey"
                android:src="@drawable/stars_regular_0"/>

        <TextView
                android:text="NUMBER OF RATINGS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numRating"
                android:textColor="@color/colorGrey"
                app:layout_constraintStart_toEndOf="@id/rating_image"
                app:layout_constraintBottom_toBottomOf="@id/rating_image"
                android:layout_marginLeft="10sp"/>

        <TextView
                android:text="@string/distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price"
                android:layout_marginHorizontal="20sp"
                android:id="@+id/distance"
                android:textColor="@color/colorGrey"/>


        <TextView
                android:text="@string/address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/type"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="20sp"
                android:maxLines="2"
                android:id="@+id/address"
                android:gravity="start"
                android:textColor="@color/colorGrey"
                android:textIsSelectable="true"
                android:autoLink="map"/>


        <TextView
                android:text="PRICE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/businessName"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="20sp"
                android:id="@+id/price"
                android:gravity="start"
                android:textColor="@color/colorGrey"/>
        <TextView
                android:text="TIME"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/distance"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="20sp"
                android:id="@+id/time"
                android:gravity="start"
                android:textColor="@color/colorGrey"/>


        <TextView
                android:text="@string/type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/GoogleRatingImage"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginHorizontal="20sp"
                android:id="@+id/type"
                android:gravity="start"
                android:textColor="@color/colorGrey"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:id="@+id/businessImage"
                app:layout_constraintTop_toBottomOf="@id/my_toolbar2"
                app:layout_constraintBottom_toTopOf="@id/businessName"
                android:layout_marginVertical="20sp"
                android:layout_marginHorizontal="20sp"
                android:contentDescription="Business Image"/>

        <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/GoogleRatingImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/rating_image"
                app:layout_constraintTop_toBottomOf="@id/rating_image"
                style="?android:attr/ratingBarStyleSmall"
                android:numStars="5"
                android:stepSize="0.1"
                android:theme="@style/RatingBar"

        />

        <TextView
                android:text="GOOGLE RATING"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/GoogleRatingText"
                android:textColor="@color/colorGrey"
                app:layout_constraintStart_toStartOf="@id/numRating"
                app:layout_constraintBottom_toBottomOf="@id/GoogleRatingImage"
        />


        <RelativeLayout
                android:id="@+id/loadingPanel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

            <ProgressBar
                    android:id="@+id/progBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"/>
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>